added fetching forecasts with virutal threads and spring cron-like scheduler