@@ -14,6 +14,18 @@ java {
     }
 }
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs += ['--enable-preview']
+}
+
+tasks.withType(Test) {
+    jvmArgs '--enable-preview'
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs '--enable-preview'
+}
+
 repositories {
     mavenCentral()
 }
@@ -28,6 +40,7 @@ dependencies {
     implementation 'org.springframework.ai:spring-ai-starter-model-openai'
     implementation 'com.squareup.okhttp3:okhttp:4.12.0'
     implementation 'com.google.code.gson:gson:2.13.1'
+    implementation 'org.javatuples:javatuples:1.2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
     testImplementation 'com.google.truth:truth:1.4.4'
